[project]
name = "iris-storage-client"
version = "0.1.0"
description = ""

requires-python = ">=3.11"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
packages = [{include = "iris_storage"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
